things and graphs

--- a/src/AngularJSSample/wwwroot/trends/trends.html
+++ b/src/AngularJSSample/wwwroot/trends/trends.html
@@ -1,11 +1,11 @@
 <div class="card">
     <h2 class="cap">Trends</h2>
     <div class="trend-point" ng-if="happyPercentage">
-    <h3>{{happyPercentage}}%</h3>
+    <h3>{{happyPercentage | number:2}}%</h3>
     <p>Happy Customers</p>
     </div>
      <div class="trend-point" ng-if="angryPercentage">
-    <h3>{{angryPercentage}}%</h3>
+    <h3>{{angryPercentage | number:2}}%</h3>
     <p>Angry Customers</p>
     </div>
     <div class="pager"></div>
