refactored many pages

--- a/src/AngularJSSample/wwwroot/highlight-flags/highlight-flags.html
+++ b/src/AngularJSSample/wwwroot/highlight-flags/highlight-flags.html
@@ -1,5 +1,4 @@
 <div class="card">
-    <h2 class="cap"></h2>
-    <p>{{message}}</p>
+    <h2 class="cap">{{message}}</h2>
     <div class="pager"></div>
 </div>
