--- a/src/AngularJSSample/wwwroot/view2/view2.html
+++ b/src/AngularJSSample/wwwroot/view2/view2.html
@@ -3,7 +3,7 @@
     <overall-satisfaction></overall-satisfaction>
 </div>
 <div class="col-md-4">
-    <highlight-flags ng-repeat="i in ['hihi','hihi2',3]" message="i"></highlight-flags>
+    <highlight-flags ng-repeat="i in ['Overall Satisfaction Metric is below goal by 5%.','Eaton Centre guests are 22% sadder than usual this week.','Scarborough Town Centre guests are 51% more excited than usual this week.']" message="i"></highlight-flags>
 </div>
 <div class="col-md-12 text-center bottom-footer">
     <a id="more-metrics" href="#!/view1">More Metrics</a>
