--- a/src/AngularJSSample/wwwroot/main-graph/main-graph.html
+++ b/src/AngularJSSample/wwwroot/main-graph/main-graph.html
@@ -1,6 +1,6 @@
 <div class="card">
 <canvas id="doughnut" class="chart chart-doughnut chart-xs" chart-data="data" chart-options="options"
-chart-labels="labels" chart-dataset-override="datasetOverride"></canvas>
+chart-labels="labels" chart-colors="colors" chart-dataset-override="datasetOverride"></canvas>
 
 <div class="center-header">Customer Emotions</div>
 <div class="pager"></div>
